fix(shs-6216): fix spacing between elements in text areas

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_wysiwyg-text-area.scss
@@ -1,8 +1,10 @@
 // WYSIWYG text area styles.
 
 // General WYSIWYG styles (all fields).
-.text-long {
-  > *:last-child {
+.text-long,
+.text-with-summary,
+.views-field-body {
+  *:last-child {
     margin-bottom: 0;
   }
 }
